{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 286,
  "lineage": "b9ee5571-ec89-54ba-1c83-b3412d518212",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9ef307985a6e645",
            "arn": "arn:aws:ec2:us-east-1:161326240347:elastic-ip/eipalloc-0d9ef307985a6e645",
            "association_id": "eipassoc-02ac7b25184e79783",
            "domain": "vpc",
            "id": "eipalloc-0d9ef307985a6e645",
            "instance": "i-02883ae4914a92e3e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09241ca10b3b8fbf6",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-44-215-145-187.compute-1.amazonaws.com",
            "public_ip": "44.215.145.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "concert-backend-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-backend-eip",
              "Project": "Concert"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.backend",
            "aws_internet_gateway.concert",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.concert",
            "data.aws_ami.ubuntu",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f2622328e1826b1",
            "arn": "arn:aws:ec2:us-east-1:161326240347:elastic-ip/eipalloc-05f2622328e1826b1",
            "association_id": "eipassoc-09653fce5268994f4",
            "domain": "vpc",
            "id": "eipalloc-05f2622328e1826b1",
            "instance": "i-0822088a155f99481",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ba81bd3881d88012",
            "private_dns": "ip-10-0-2-160.ec2.internal",
            "private_ip": "10.0.2.160",
            "public_dns": "ec2-34-200-160-251.compute-1.amazonaws.com",
            "public_ip": "34.200.160.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "concert-frontend-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-frontend-eip",
              "Project": "Concert"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.frontend",
            "aws_internet_gateway.concert",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.concert",
            "data.aws_ami.ubuntu",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0290a506a2b87a4d6",
            "arn": "arn:aws:ec2:us-east-1:161326240347:elastic-ip/eipalloc-0290a506a2b87a4d6",
            "domain": "vpc",
            "id": "eipalloc-0290a506a2b87a4d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-60-65.compute-1.amazonaws.com",
            "public_ip": "52.7.60.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "concert-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-eip-1",
              "Project": "Concert"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.concert",
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088969fa79557bf74",
            "arn": "arn:aws:ec2:us-east-1:161326240347:elastic-ip/eipalloc-088969fa79557bf74",
            "domain": "vpc",
            "id": "eipalloc-088969fa79557bf74",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-161-249-248.compute-1.amazonaws.com",
            "public_ip": "54.161.249.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "concert-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-eip-2",
              "Project": "Concert"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.concert",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:161326240347:instance/i-02883ae4914a92e3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "concert-ec2-profile",
            "id": "i-02883ae4914a92e3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "concert-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09241ca10b3b8fbf6",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-44-200-159-251.compute-1.amazonaws.com",
            "public_ip": "44.200.159.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:161326240347:key/17458a80-7ae7-47b7-8165-8ebf16f662c1",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "Concert"
                },
                "throughput": 125,
                "volume_id": "vol-0ad3c460169289dd7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd8d035dcc0f09bb",
            "tags": {
              "Name": "concert-backend-ec2",
              "Role": "backend"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-backend-ec2",
              "Project": "Concert",
              "Role": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d844b44878f2b16"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_internet_gateway.concert",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.concert",
            "data.aws_ami.ubuntu",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:161326240347:instance/i-0822088a155f99481",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "concert-ec2-profile",
            "id": "i-0822088a155f99481",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "concert-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba81bd3881d88012",
            "private_dns": "ip-10-0-2-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.160",
            "public_dns": "ec2-3-94-54-28.compute-1.amazonaws.com",
            "public_ip": "3.94.54.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:161326240347:key/17458a80-7ae7-47b7-8165-8ebf16f662c1",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "Concert"
                },
                "throughput": 125,
                "volume_id": "vol-0d99c7a3b1f9e1d44",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de3021d9d1acc442",
            "tags": {
              "Name": "concert-frontend-ec2",
              "Role": "frontend"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-frontend-ec2",
              "Project": "Concert",
              "Role": "frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d844b44878f2b16"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_internet_gateway.concert",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.concert",
            "data.aws_ami.ubuntu",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "concert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:internet-gateway/igw-07a584016e4d631d7",
            "id": "igw-07a584016e4d631d7",
            "owner_id": "161326240347",
            "tags": {
              "Name": "concert-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-igw",
              "Project": "Concert"
            },
            "vpc_id": "vpc-077128945cf424869"
          },
          "dependencies": [
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "concert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0290a506a2b87a4d6",
            "association_id": "eipassoc-07f8ceeab92e2fb48",
            "connectivity_type": "public",
            "id": "nat-01ee39335ee5151f2",
            "network_interface_id": "eni-04383234f65cd2e67",
            "private_ip": "10.0.1.228",
            "public_ip": "52.7.60.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cd8d035dcc0f09bb",
            "tags": {
              "Name": "concert-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-nat-1",
              "Project": "Concert"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088969fa79557bf74",
            "association_id": "eipassoc-03e774054b88d8914",
            "connectivity_type": "public",
            "id": "nat-0a9330b9e3dd90ec1",
            "network_interface_id": "eni-04f675c2b0c3262fd",
            "private_ip": "10.0.2.154",
            "public_ip": "54.161.249.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de3021d9d1acc442",
            "tags": {
              "Name": "concert-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-nat-2",
              "Project": "Concert"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:route-table/rtb-0fe5503e9ad49acfb",
            "id": "rtb-0fe5503e9ad49acfb",
            "owner_id": "161326240347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ee39335ee5151f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "concert-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-private-rt-1",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_nat_gateway.concert",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:route-table/rtb-04cf5df1721a0821c",
            "id": "rtb-04cf5df1721a0821c",
            "owner_id": "161326240347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9330b9e3dd90ec1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "concert-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-private-rt-2",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_nat_gateway.concert",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:route-table/rtb-07e0ada21977e69fa",
            "id": "rtb-07e0ada21977e69fa",
            "owner_id": "161326240347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a584016e4d631d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "concert-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-public-rt",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.concert",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0281347b56486d3e1",
            "route_table_id": "rtb-0fe5503e9ad49acfb",
            "subnet_id": "subnet-05be23bd047c8e44c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_nat_gateway.concert",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7b96c131500f2a",
            "route_table_id": "rtb-04cf5df1721a0821c",
            "subnet_id": "subnet-0669840a38656fec1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.concert",
            "aws_nat_gateway.concert",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049fe6d433016984e",
            "route_table_id": "rtb-07e0ada21977e69fa",
            "subnet_id": "subnet-0cd8d035dcc0f09bb"
          },
          "dependencies": [
            "aws_internet_gateway.concert",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f5ae6acee072c3",
            "route_table_id": "rtb-07e0ada21977e69fa",
            "subnet_id": "subnet-0de3021d9d1acc442"
          },
          "dependencies": [
            "aws_internet_gateway.concert",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:security-group/sg-084bc393050b09562",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084bc393050b09562",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "concert-alb-sg",
            "name_prefix": "",
            "owner_id": "161326240347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concert-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-alb-sg",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:security-group/sg-01d844b44878f2b16",
            "description": "Security group for Concert EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d844b44878f2b16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "concert-ec2-sg",
            "name_prefix": "",
            "owner_id": "161326240347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concert-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-ec2-sg",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:security-group/sg-0c5235ced34e7871a",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5235ced34e7871a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bc393050b09562"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "concert-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "161326240347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concert-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-ecs-tasks-sg",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:security-group/sg-0677bb94792bb564e",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0677bb94792bb564e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5235ced34e7871a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "concert-rds-sg",
            "name_prefix": "",
            "owner_id": "161326240347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concert-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-rds-sg",
              "Project": "Concert"
            },
            "timeouts": null,
            "vpc_id": "vpc-077128945cf424869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:subnet/subnet-05be23bd047c8e44c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05be23bd047c8e44c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "161326240347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "concert-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-private-subnet-1",
              "Project": "Concert"
            },
            "vpc_id": "vpc-077128945cf424869"
          },
          "dependencies": [
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:subnet/subnet-0669840a38656fec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669840a38656fec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "161326240347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "concert-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-private-subnet-2",
              "Project": "Concert"
            },
            "vpc_id": "vpc-077128945cf424869"
          },
          "dependencies": [
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:subnet/subnet-0cd8d035dcc0f09bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd8d035dcc0f09bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "161326240347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "concert-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-public-subnet-1",
              "Project": "Concert"
            },
            "vpc_id": "vpc-077128945cf424869"
          },
          "dependencies": [
            "aws_vpc.concert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:subnet/subnet-0de3021d9d1acc442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de3021d9d1acc442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "161326240347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "concert-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-public-subnet-2",
              "Project": "Concert"
            },
            "vpc_id": "vpc-077128945cf424869"
          },
          "dependencies": [
            "aws_vpc.concert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "concert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161326240347:vpc/vpc-077128945cf424869",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b54956e531566c88",
            "default_route_table_id": "rtb-0ed7423d4d7f5d2c6",
            "default_security_group_id": "sg-08fb4771bb3ed3e3c",
            "dhcp_options_id": "dopt-065dd9a9b82addf87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077128945cf424869",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed7423d4d7f5d2c6",
            "owner_id": "161326240347",
            "tags": {
              "Name": "concert-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "concert-vpc",
              "Project": "Concert"
            }
          }
        }
      ]
    }
  ]
}